--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "3.8.3",
+    "@react-navigation/stack": "^5.13.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "modal-react-native-web": "^0.2.0",
@@ -15,11 +18,18 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-flags": "^1.0.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-i18n": "^2.0.15",
     "react-native-ico-flags": "^3.3.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-svg": "^12.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-localization": "^2.1.6",
+    "react-native-modal": "^11.6.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation-stack": "^2.10.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
